--- a/styles.css
+++ b/styles.css
@@ -21,11 +21,11 @@ form {
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  color: rgb(59, 138, 184);
   border: 4px solid rgb(59, 138, 184);
-  background-color: rgb(236, 232, 232);
-  width: 550px;
-  margin-top: 150px;
-  margin-left: 440px;
+  background-color: rgb(240, 238, 237);
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 #main-page-box {
@@ -61,8 +61,8 @@ form {
 }
 
 input {
-  width: 40%;
-  height: 30;
+  justify-content: center;
+  align-content: center;
 }
 
 #account-username {
@@ -85,24 +85,24 @@ input {
 
 #incoming {
   font-size: 20px;
-  margin-right: 135px;
+  margin-right: 75px;
   margin-bottom: 5px;
 }
 
 #sent {
   font-size: 20px;
-  margin-right: 170px;
+  margin-right: 120px;
   margin-bottom: 5px;
 }
 
 #create-new {
   font-size: 20px;
-  margin-right: 100px;
+  margin-right: 50px;
   margin-bottom: 5px;
 }
 
 button {
-  width: 108px;
+  width: 100px;
   margin: 8px;
 }
 
@@ -117,7 +117,8 @@ button {
 }
 
 #browse-input {
-  margin-left: 440px;
+  margin-left: 30%;
+  width: 350px;
 }
 
 #browse-box {
@@ -138,28 +139,49 @@ button {
 
 #p-name {
   font-size: 20px;
-  margin-right: 170px;
+  margin-right: 120px;
   margin-bottom: 5px;
 }
 
 #p-email {
   font-size: 20px;
-  margin-right: 160px;
+  margin-right: 110px;
   margin-bottom: 5px;
 }
 
 #p-username {
   font-size: 20px;
-  margin-right: 130px;
+  margin-right: 80px;
   margin-bottom: 5px;
 }
 
 #p-location {
   font-size: 20px;
-  margin-right: 120px;
+  margin-right: 80px;
+  margin-bottom: 5px;
+}
+#item-title {
+  font-size: 20px;
+  margin-right: 55px;
   margin-bottom: 5px;
 }
 
+#item-descrip {
+  font-size: 20px;
+  margin-left: 15px;
+  margin-bottom: 5px;
+}
+
+#item-price {
+  font-size: 20px;
+  margin-right: 110px;
+  margin-bottom: 5px;
+}
+
+#post-button {
+  margin-left: 120px;
+}
 h1 {
+  color: rgb(59, 138, 184);
   text-align: center;
 }
